tests/test180.rael.exp
Error [tests/test180.rael:2:5]: Expected 1 or 2 arguments
| log :Types:Range()
|     ^
